--- a/src/index.html
+++ b/src/index.html
@@ -282,7 +282,10 @@
             </div>
 
             <!--Submit Button-->
-            <button type="submit" class="btn btn-primary"> Submit Application</button>
+            <button type="submit" class="btn btn-primary">
+                <a href="mailto:levi01152@gmail.com" target="_blank"></a>
+                Submit Application
+            </button>
 
 
         </form>
@@ -292,24 +295,24 @@
     <!--FOOTER-->
     <div class="container">
         <footer class="py-3 my-4">
-           <ul class="nav justify-content-center border-top pt-3 mb-3">
-            <li class="nav-item">
-                <a href="https://jovian.com/learn" class="nav-link px-2 text-body-secondary">
-                    Courses
-                </a>
-            </li>
-            <li class="nav-item">
-                <a href="https://jovian.com/learn" class="nav-link px-2 text-body-secondary">
-                    Programmes
-                </a>
-            </li>
-            <li class="nav-item">
-                <a href="https://youtube.com/@jovianhq" class="nav-link px-2 text-body-secondary">
-                    Youtube
-                </a>
-            </li>
+            <ul class="nav justify-content-center border-top pt-3 mb-3">
+                <li class="nav-item">
+                    <a href="https://jovian.com/learn" class="nav-link px-2 text-body-secondary">
+                        Courses
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="https://jovian.com/learn" class="nav-link px-2 text-body-secondary">
+                        Programmes
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="https://youtube.com/@jovianhq" class="nav-link px-2 text-body-secondary">
+                        Youtube
+                    </a>
+                </li>
 
-           </ul>
+            </ul>
 
 
 
