Save the change to application form

--- a/src/index.html
+++ b/src/index.html
@@ -212,7 +212,7 @@
         <h2 class="text-center">Submit Your Application</h2>
 
         <form action="https://formbold.com/s/3wvKl" method="post" enctype="multipart/form-data"
-            class="col-lg-8 offset-2">
+            class="col-lg-8 offset-lg-2">
 
             <!--NAME-->
 
